refactor: to use slf4j instead of souts