@@ -15,6 +15,9 @@ dependencies {
 
     implementation("com.google.code.gson:gson:2.10.1")
 
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'org.slf4j:slf4j-simple:2.0.13'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -22,4 +25,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs += "--enable-preview"
+}
+
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
 }
